--- a/monday_application_backend/tsconfig.json
+++ b/monday_application_backend/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "types": ["node"],
+    "allowJs": true,
+    "moduleResolution": "node",
+    "types": ["node", "jest"],
     "esModuleInterop": true,
     "declaration": true,
     "removeComments": true,
