--- a/monday_application_backend/package.json
+++ b/monday_application_backend/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -29,15 +30,25 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^8.0.7",
+    "@redis/client": "^1.6.0",
     "@urql/core": "^5.0.8",
+    "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
+    "cache-manager": "^5.0.0",
+    "cache-manager-ioredis-yet": "^2.1.2",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "install": "^0.13.0",
+    "ioredis": "^5.4.1",
     "monday-sdk-js": "^0.5.5",
+    "nestjs-axios-retry": "^1.0.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
@@ -48,6 +59,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
@@ -88,6 +100,6 @@
     "testEnvironment": "node"
   },
   "engines": {
-    "node": ">=18.18.0 <18.19.0"
+    "node": ">=18.18.0"
   }
 }
