feat: webhook tests successful

--- a/monday_application_backend/package.json
+++ b/monday_application_backend/package.json
@@ -16,6 +16,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:webhook": "node src/test-utils/webhook-tester.mjs",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -46,6 +47,7 @@
     "ioredis": "^5.4.1",
     "monday-sdk-js": "^0.5.5",
     "nestjs-axios-retry": "^1.0.7",
+    "node-fetch": "^3.3.2",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "redis": "^4.7.0",
