--- a/monday_application_backend/tsconfig.json
+++ b/monday_application_backend/tsconfig.json
@@ -24,6 +24,7 @@
   },
   "ts-node": {
     "esm": true,
+    "experimentalSpecifierResolution": "node",
     "experimentalSpecifiers": true
   }
 }
